Revert "added less support and a new Character Sheet Style"
This reverts commit 1eb333188aedad4e243d8df60103f476797532a2.

--- a/templates/actor/parts/character/actor-partial-attacks.html
+++ b/templates/actor/parts/character/actor-partial-attacks.html
@@ -28,7 +28,7 @@
                         <th class="summary-attack-damage">&nbsp;</th>
                     </tr>                    
                 </thead>
-                <tbody class="item-list">
+                <tbody>
                 {{#if data.flags.locked}}
                     {{#each attacks as |attack id|}}
                     <tr class="item" data-itemid="{{attack._id}}" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="{{attacktype}}weapons">
