--- a/less/rqgss-actorsheet.less
+++ b/less/rqgss-actorsheet.less
@@ -516,4 +516,31 @@
             }                                           
         }
     }
+    .backstory-gear-container {
+        display: grid;
+        grid-template-columns: 30% 40% 30%;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "gear backstory events";
+        border: 1px solid #7a7971;
+        border-radius: 3px;
+        .gear-container {
+            grid-area:gear;
+            border: 1px solid #7a7971;
+            border-radius: 3px;
+            text-align: center;
+        }
+        .backstory-container {
+            grid-area:backstory;
+            border: 1px solid #7a7971;
+            border-radius: 3px;
+            text-align: center;            
+        }
+        .events-container {
+            grid-area:events;
+            border: 1px solid #7a7971;
+            border-radius: 3px;
+            text-align: center;             
+        }
+    }
 }
