--- a/templates/actor/parts/actor-activeeffectsv2.html
+++ b/templates/actor/parts/actor-activeeffectsv2.html
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         {{#each section.effects as |effect|}}
-        <tr class="active-effects" data-item-id="{{item._id}}" data-itemid="{{item._id}}">
+        <tr class="active-effects" data-item-id="{{item.id}}" data-itemid="{{item.id}}">
             <td class="effects-table-img">
                 <img class="effect-image" style="width: 10px; height: 10px" src="{{effect.data.icon}}"/>
             </td>
