--- a/templates/actor/starterset/parts/hitlocations-ss-partial.html
+++ b/templates/actor/starterset/parts/hitlocations-ss-partial.html
@@ -11,12 +11,12 @@
     </thead>
     <tbody>
     {{#each data.hitlocations as |hl id|}}
-        <tr class="item" data-itemid="{{hl._id}}">
+        <tr class="item" data-itemid="{{hl.id}}">
             <td>{{localize hl.name}}</td>
             <td>{{hl.data.data.rangestart}}-{{hl.data.data.rangeend}}</td>
             <td>{{hl.data.data.currenthp}}/{{hl.data.data.maxhp}}</td>
             <td>{{hl.data.data.armor}}</td>
-            <td><input id="{{hl._id}}_wounds" class="attribute-input hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
+            <td><input id="{{hl.id}}_wounds" class="attribute-input hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
         </tr>        
     {{/each}}
     </tbody>
@@ -45,13 +45,13 @@
     </thead>
     <tbody>                
     {{#each data.hitlocations as |hl id|}}
-        <tr style="height: 28px;" class="item" data-item-id="{{hl._id}}">
+        <tr style="height: 28px;" class="item" data-item-id="{{hl.id}}">
             <td>{{localize hl.name}}</td>
             <td>{{hl.data.data.rangestart}}-{{hl.data.data.rangeend}}</td>
             <td>{{hl.data.data.currenthp}}</td>
             <td>{{hl.data.data.maxhp}}</td>
-            <td><input id="{{hl._id}}_armor" class="attribute-value hitloc-armor"  type="text"  name="data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  /></td>
-            <td><input id="{{hl._id}}_wounds" class="hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
+            <td><input id="{{hl.id}}_armor" class="attribute-value hitloc-armor"  type="text"  name="data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  /></td>
+            <td><input id="{{hl.id}}_wounds" class="hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
             <td class="item-controls">
                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
