--- a/templates/actor/starterset/parts/skills-ss-partial.html
+++ b/templates/actor/starterset/parts/skills-ss-partial.html
@@ -8,10 +8,10 @@
         </tr>
     </thead>
     {{#each skillList as |item id|}}
-        <tr class="skill skill-row" data-item-id="{{item._id}}" data-itemid="{{item._id}}">
-            <td class="item" data-item-id="{{item._id}}"><input class="skill-experience experience-box" id="{{id}}_{{item._id}}_experience_skill" type="checkbox" name="data.experience" {{checked item.data.data.experience}}/></td>                         
-            <td class="item" data-item-id="{{item._id}}"><a class="skill-roll skill-menu" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.name}} ({{item.data.data.base}})</a></td>
-            <td class="item" data-item-id="{{item._id}}"><a class="skill-roll skill-menu" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.data.data.total}}</a></td>
+        <tr class="skill skill-row" data-item-id="{{item.id}}" data-itemid="{{item.id}}">
+            <td class="item" data-item-id="{{item.id}}"><input class="skill-experience experience-box" id="{{id}}_{{item.id}}_experience_skill" type="checkbox" name="data.experience" {{checked item.data.data.experience}}/></td>                         
+            <td class="item" data-item-id="{{item.id}}"><a class="skill-roll skill-menu" data-itemid="{{item.id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.name}} ({{item.data.data.base}})</a></td>
+            <td class="item" data-item-id="{{item.id}}"><a class="skill-roll skill-menu" data-itemid="{{item.id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.data.data.total}}</a></td>
         </tr>
     {{/each}}
 </table>
