--- a/templates/chat/attack-chat.hbs
+++ b/templates/chat/attack-chat.hbs
@@ -1,4 +1,4 @@
-<div class="chat-card attack" data-item-id="{{_id}}" data-owner-id="{{owner}}">
+<div class="chat-card attack" data-item-id="{{id}}" data-owner-id="{{owner}}">
     <div class="card-content">
         <p>{{data.description}}</p>
     </div>
