--- a/templates/chat/defense-dialog.html
+++ b/templates/chat/defense-dialog.html
@@ -4,7 +4,7 @@
     {{log defenses}}
         <select name="defensename">
             {{#each defenses as |defense id|}}
-            <option value="{{defense._id}}">{{defense.name}}</option>
+            <option value="{{defense.id}}">{{defense.name}}</option>
             {{/each}}         
         </select>
   </div>
