--- a/templates/chat/partials/attack-card.hbs
+++ b/templates/chat/partials/attack-card.hbs
@@ -1,4 +1,4 @@
-<div class="chat-attack attack" data-item-id="{{_id}}" data-owner-id="{{owner}}">
+<div class="chat-attack attack" data-item-id="{{id}}" data-owner-id="{{owner}}">
     <div class="attack-content">
         {{!-- To be replaced by the attack chat card content --}}
         {{data.description}}
