--- a/templates/chat/skill-card.html
+++ b/templates/chat/skill-card.html
@@ -1,4 +1,4 @@
-<div class="runequest chat-card skill-card" data-actor-id="{{actor._id}}" data-item-id="{{item._id}}"
+<div class="runequest chat-card skill-card" data-actor-id="{{actor.id}}" data-item-id="{{item.id}}"
      {{#if tokenId}}data-token-id="{{tokenId}}"{{/if}}>
     <header class="card-header">
         <img src="{{actor.img}}" title="{{charname}}" width="50" height="50"/>
