--- a/templates/actor/parts/character/actor-combat.html
+++ b/templates/actor/parts/character/actor-combat.html
@@ -10,7 +10,7 @@
                 <tbody class="item-list">
                     <tr class="item-list">
                     {{#each data.defense as |item id|}}
-                        <td class="item skill summary-skill-roll combat-defense-field" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">
+                        <td class="item skill summary-skill-roll combat-defense-field" data-itemid="{{item.id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">
                             {{item.name}}: {{item.data.data.total}}                     
                         </td>
                     {{/each}}
