--- a/templates/actor/parts/character/actor-inventory.html
+++ b/templates/actor/parts/character/actor-inventory.html
@@ -20,9 +20,9 @@
         {{#each data.gear as |item id|}}
             {{log "Displaying gear item:"}}
             {{log item}}
-            <tr class="item" data-item-id="{{item._id}}" style="height: 28px;">
+            <tr class="item" data-item-id="{{item.id}}" style="height: 28px;">
             <td style="width: 25%; height: 28px; text-align: center;">{{localize item.name}}</td>
-            <td style="width: 15%; height: 28px; text-align: center;"><input class="item-edit" id="{{id}}_{{item._id}}_item_qty" type="text" name="data.quantity" value="{{item.data.data.quantity}}"/></td>
+            <td style="width: 15%; height: 28px; text-align: center;"><input class="item-edit" id="{{id}}_{{item.id}}_item_qty" type="text" name="data.quantity" value="{{item.data.data.quantity}}"/></td>
             <td style="width: 15%; height: 28px; text-align: center;">{{item.data.data.weight}}</td>
             <td style="width: 10%; text-align: center;">
                 {{displayDescription item.data.data.description}} <!-- To be replaced by a better display once I find if Editor can be used readonly -->
@@ -49,11 +49,11 @@
     </thead>
     <tbody>
     {{#each data.mpstorage as |storage id|}}
-        <tr class="item" data-item-id="{{storage._id}}" style="height: 28px;">
+        <tr class="item" data-item-id="{{storage.id}}" style="height: 28px;">
         <td style="width: 25%; height: 28px; text-align: center;">{{localize storage.name}}</td>
-        <td style="width: 15%; height: 28px; text-align: center;"><input class="mpstorage-current" id="{{id}}_{{storage._id}}_currentmp_mpstorage" type="text" name="data.currentmp" value="{{storage.data.data.currentmp}}"/></td>
+        <td style="width: 15%; height: 28px; text-align: center;"><input class="mpstorage-current" id="{{id}}_{{storage.id}}_currentmp_mpstorage" type="text" name="data.currentmp" value="{{storage.data.data.currentmp}}"/></td>
         <td style="width: 15%; height: 28px; text-align: center;">{{storage.data.data.maxmp}}</td>
-        <td style="width: 10%; text-align: center;"><input class="mpstorage-equiped" id="{{id}}_{{storage._id}}_mpstorage_equiped" type="checkbox" name="data.equiped" {{checked storage.data.data.equiped}}/></td>
+        <td style="width: 10%; text-align: center;"><input class="mpstorage-equiped" id="{{id}}_{{storage.id}}_mpstorage_equiped" type="checkbox" name="data.equiped" {{checked storage.data.data.equiped}}/></td>
         <td>
             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>                
