--- a/templates/actor/parts/character/actor-summary.html
+++ b/templates/actor/parts/character/actor-summary.html
@@ -6,7 +6,7 @@
             <tbody>
                 {{#each data.elementalrunes as |elementalrune id|}}
                     <tr class="elemental-rune" data-rune="{{id}}">
-                        <td class="elemental-rune" colspan="2"><a class="elementalrunes-roll rollable">{{localize elementalrune.label}}: {{elementalrune.value}}</a><input class="rune-experience" id="{{id}}_{{elementalrune._id}}_rune_experience" type="checkbox" name="data.elementalrunes.{{id}}.experience" {{checked elementalrune.experience}}/></td>
+                        <td class="elemental-rune" colspan="2"><a class="elementalrunes-roll rollable">{{localize elementalrune.label}}: {{elementalrune.value}}</a><input class="rune-experience" id="{{id}}_{{elementalrune.id}}_rune_experience" type="checkbox" name="data.elementalrunes.{{id}}.experience" {{checked elementalrune.experience}}/></td>
                     </tr>
                 {{/each}}
                 {{#each data.powerrunes as |powerrunepair pairid|}}
@@ -14,7 +14,7 @@
                     {{#each powerrunepair as |powerrune runeid|}}
                         <td>
                             <a class="powerrunes-roll" data-rune="{{runeid}}">{{localize powerrune.label}}: {{powerrune.value}}</a>
-                            <input class="rune-experience" id="{{id}}_{{powerrune._id}}_rune_experience" type="checkbox" name="data.powerrunes.{{pairid}}.{{runeid}}.experience" {{checked powerrune.experience}}/>
+                            <input class="rune-experience" id="{{id}}_{{powerrune.id}}_rune_experience" type="checkbox" name="data.powerrunes.{{pairid}}.{{runeid}}.experience" {{checked powerrune.experience}}/>
                         </td>
                     {{/each}}
                     </li>
@@ -33,10 +33,10 @@
                 </thead>
                 <tbody>
                     {{#each data.passions as |passion id|}}
-                    <tr class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
-                        <td class="summary-passion-label"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.name}}</a></td>
-                        <td class="summary-passion-value"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.data.data.total}}</a></td>
-                        <td class="item summary-passion-check" data-itemid="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
+                    <tr class="item flexrow" data-item-id="{{passion.id}}" data-passionname="{{passion.name}}">
+                        <td class="summary-passion-label"><a class="passion-roll" data-item-id="{{passion.id}}">{{passion.name}}</a></td>
+                        <td class="summary-passion-value"><a class="passion-roll" data-item-id="{{passion.id}}">{{passion.data.data.total}}</a></td>
+                        <td class="item summary-passion-check" data-itemid="{{passion.id}}"><input class="passion-experience" id="{{id}}_{{passion.id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
                         <td class="item-controls summary-passion-button">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -57,7 +57,7 @@
                 <tbody>
                 {{#each data.defense as |item id|}}
                     <tr>
-                        <td class="skill summary-skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">
+                        <td class="skill summary-skill-roll" data-itemid="{{item.id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">
                             {{item.name}}: {{item.data.data.total}}                     
                         </td>
                     </tr>
@@ -79,10 +79,10 @@
                             <td class="attack-type-name" colspan="10">{{localize "RQG.ELEMENTAL"}}</td>                  
                         </tr>
                         {{#each data.runes.elemental as |rune id|}}
-                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
-                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
-                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
-                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                        <tr class="item flexrow" data-item-id="{{rune.id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune.id}}"><input class="rune-experience" id="{{id}}_{{rune.id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
                             <td class="item-controls" colspan="2">
                                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -93,10 +93,10 @@
                             <th class="attack-type-name" colspan="10">{{localize "RQG.POWER"}} / {{localize "RQG.FORM"}}</th>                  
                         </tr>
                         {{#each data.runes.power as |rune id|}}
-                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
-                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
-                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
-                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                        <tr class="item flexrow" data-item-id="{{rune.id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune.id}}"><input class="rune-experience" id="{{id}}_{{rune.id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
                             <td class="item-controls" colspan="2">
                                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -107,10 +107,10 @@
                             <th class="attack-type-name" colspan="10">{{localize "RQG.FORM"}}</th>                  
                         </tr>
                         {{#each data.runes.form as |rune id|}}
-                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
-                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
-                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
-                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                        <tr class="item flexrow" data-item-id="{{rune.id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune.id}}"><input class="rune-experience" id="{{id}}_{{rune.id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
                             <td class="item-controls" colspan="2">
                                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -121,10 +121,10 @@
                             <th class="attack-type-name" colspan="10">{{localize "RQG.CONDITION"}}</th>                  
                         </tr>
                         {{#each data.runes.condition as |rune id|}}
-                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
-                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
-                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
-                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                        <tr class="item flexrow" data-item-id="{{rune.id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune.id}}"><input class="rune-experience" id="{{id}}_{{rune.id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
                             <td class="item-controls" colspan="2">
                                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -135,10 +135,10 @@
                             <th class="attack-type-name" colspan="10">{{localize "RQG.OTHERS"}}</th>                  
                         </tr>
                         {{#each data.runes.others as |rune id|}}
-                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
-                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
-                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
-                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                        <tr class="item flexrow" data-item-id="{{rune.id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune.id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune.id}}"><input class="rune-experience" id="{{id}}_{{rune.id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
                             <td class="item-controls" colspan="2">
                                 <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                                 <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
