--- a/templates/actor/starterset/parts/mpstorage-ss-partial.html
+++ b/templates/actor/starterset/parts/mpstorage-ss-partial.html
@@ -10,11 +10,11 @@
     </thead>
     <tbody>
     {{#each data.mpstorage as |storage id|}}
-        <tr class="item" data-item-id="{{storage._id}}">
+        <tr class="item" data-item-id="{{storage.id}}">
         <td>{{localize storage.name}}</td>
-        <td><input class="mpstorage-current mpstorage-input" id="{{id}}_{{storage._id}}_currentmp_mpstorage" type="text" name="data.currentmp" value="{{storage.data.data.currentmp}}"/></td>
+        <td><input class="mpstorage-current mpstorage-input" id="{{id}}_{{storage.id}}_currentmp_mpstorage" type="text" name="data.currentmp" value="{{storage.data.data.currentmp}}"/></td>
         <td>{{storage.data.data.maxmp}}</td>
-        <td><input class="mpstorage-equiped" id="{{id}}_{{storage._id}}_mpstorage_equiped" type="checkbox" name="data.equiped" {{checked storage.data.data.equiped}}/></td>
+        <td><input class="mpstorage-equiped" id="{{id}}_{{storage.id}}_mpstorage_equiped" type="checkbox" name="data.equiped" {{checked storage.data.data.equiped}}/></td>
         <td>
             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>                
