--- a/templates/item/attack-sheet.html
+++ b/templates/item/attack-sheet.html
@@ -31,8 +31,8 @@
                 {{#if @root.document.parent}}
                 <select name="data.skillused">
                     {{#select data.skillused}}
-                    {{#each (getcharacterattackskills @root.document.parent.data._id data.attacktype) as |skill id|}}
-                    <option value="{{skill._id}}">{{skill.name}}</option>
+                    {{#each (getcharacterattackskills @root.document.parent.id data.attacktype) as |skill id|}}
+                    <option value="{{skill.id}}">{{skill.name}}</option>
                     {{/each}}
                     {{/select}}
                 </select>                  
